--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,10 +3,12 @@
  "private": true,
  "version": "1.0.0",
  "type": "module",
- "scripts": {
-  "dev": "vite",
-  "preview": "vite preview"
- },
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview",
+    "netlify: "npm run build && npx netlify deploy",
+  },
  "dependencies": {
   "axios": "^1.6.2",
   "i18next": "^25.8.3",
