--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,10 +4,12 @@
  "version": "1.0.0",
  "type": "module",
   "scripts": {
+  "scripts": {
+  "scripts": {
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "netlify: "npm run build && npx netlify deploy",
+    "netlify": "npm run build && npx netlify deploy",
   },
  "dependencies": {
   "axios": "^1.6.2",
