--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@hello-pangea/dnd": "^18.0.1",
     "axios": "^1.6.2",
     "i18next": "^25.8.3",
     "i18next-browser-languagedetector": "^8.2.0",
